--- a/index.html
+++ b/index.html
@@ -10,9 +10,52 @@
 
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js" crossorigin="anonymous"></script>
 </head>
+<style type="text/css">
+
+#paint{
+		width: 100px;
+		height:40px;
+		font-size: 15px;
+		top: 200px;
+		left: 100px;
+		position: absolute;
+		background-color: #ff5bb0;
+		color:#ffffff;
+		font-family: Chalkduster, fantasy;
+		border-radius:6px;
+		border:1px solid #ee1eb5;
+		cursor:pointer;
+		box-shadow:inset 0px 1px 0px 0px #fbafe3;
+		text-shadow:0px 1px 0px #c70067;
+}
+
+#eraser{
+		width: 100px;
+		height:40px;
+		font-size: 15px;
+		top: 240px;
+		left: 100px;
+		position: absolute;
+		background-color: #ff5bb0;
+		color:#ffffff;
+		font-family: Chalkduster, fantasy;
+		border-radius:6px;
+		border:1px solid #ee1eb5;
+		cursor:pointer;
+		box-shadow:inset 0px 1px 0px 0px #fbafe3;
+		text-shadow:0px 1px 0px #c70067;
+}
+
+
+</style>
 
 <body></body>
 
 <script src="./sketch.js"></script>
+
+
+<button id="eraser" onclick = "eraser()">Eraser</button>
+<button id="paint" onclick = "paint()">Paint</button>
+
 
 </html>
