--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 #paint{
 		width: 100px;
-		height:40px;
+		height:30px;
 		font-size: 15px;
-		top: 200px;
-		left: 100px;
+		top: 170px;
+		left: 20px;
 		position: absolute;
 		background-color: #ff5bb0;
 		color:#ffffff;
@@ -31,10 +31,10 @@
 
 #eraser{
 		width: 100px;
-		height:40px;
+		height:30px;
 		font-size: 15px;
-		top: 240px;
-		left: 100px;
+		top: 260px;
+		left: 20px;
 		position: absolute;
 		background-color: #ff5bb0;
 		color:#ffffff;
@@ -46,6 +46,22 @@
 		text-shadow:0px 1px 0px #c70067;
 }
 
+#flower{
+		width: 100px;
+		height:30px;
+		font-size: 15px;
+		top: 350px;
+		left: 20px;
+		position: absolute;
+		background-color: #ff5bb0;
+		color:#ffffff;
+		font-family: Chalkduster, fantasy;
+		border-radius:6px;
+		border:1px solid #ee1eb5;
+		cursor:pointer;
+		box-shadow:inset 0px 1px 0px 0px #fbafe3;
+		text-shadow:0px 1px 0px #c70067;
+}
 
 </style>
 
@@ -56,6 +72,7 @@
 
 <button id="eraser" onclick = "eraser()">Eraser</button>
 <button id="paint" onclick = "paint()">Paint</button>
+<button id="flower" onclick = "flower()">flower</button>
 
 
 </html>
