--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 }
 
 
-#flower{
+#heart{
 		width: 60px;
 		height:30px;
-		font-size: 12px;
+		font-size: 15px;
 		top: 460px;
 		left: 225px;
 		position: absolute;
@@ -183,6 +183,23 @@
 		text-shadow:0px 1px 0px #c70067;
 }
 
+#flower{
+		width: 270px;
+		height:30px;
+		font-size: 13px;
+		top: 770px;
+		left:10px;
+		position: absolute;
+		background-color: #ff5bb0;
+		color:#ffffff;
+		font-family: Chalkduster, fantasy;
+		border-radius:6px;
+		border:1px solid #ee1eb5;
+		cursor:pointer;
+		box-shadow:inset 0px 1px 0px 0px #fbafe3;
+		text-shadow:0px 1px 0px #c70067;
+}
+
 
 
 
@@ -207,7 +224,8 @@
 
 <button id="ellipse" onclick = "drawEllipse()">Ellipse</button>
 <button id="rect" onclick = "drawRectangle()">Rect</button>
+<button id="heart" onclick = "drawHeart()">Heart</button>
 <button id="star" onclick = "drawStar()">Star</button>
-<button id="flower" onclick = "drawFlower()">Flower</button>
+<button id="flower" onclick = "drawFlower()">Bonus: Crazy Animated Flower</button>
 
 </html>
